--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                     <p class="maj">ADRESSE E-MAIL</p>
                     <a href="mailto:patrickdubile47@gmail.com"><p>patrickdubile47@gmail.com</p></a>
                 </div>
-            </div>
+            </div>hrenrtnr,ry,ry,y,y,yr,r
         </div>
     </footer>
 </body>
