probleme chemin image

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <p class="sousTitre">En famille ou entre amis</p>
         <section class="produits">
             <div class="card">
-                <img src="/photoPatisserie/Gateau/6.jpg" alt="image de gateau">
+                <img src="photoPatisserie/Gateau/6.jpg" alt="image de gateau">
                 <p class="tCard">Gateaux</p>
                 <p class="descriptionCard">Découvrez nos gâteaux exquis, une fusion parfaite entre saveurs authentiques et créativité artisanale. Chaque bouchée offre une expérience unique et délicieuse, faisant de chaque occasion un moment mémorable.</p>
                 <p class="prix">Prix moyen : 1.30€ la part</p>
@@ -34,7 +34,7 @@
             </div>
 
             <div class="card">
-                <img src="/photoPatisserie/Buche/2.jpg" alt="image de buche">
+                <img src="photoPatisserie/Buche/2.jpg" alt="image de buche">
                 <p class="tCard">Buche</p>
                 <p class="descriptionCard">Découvrez nos buches exquise, une fusion parfaite entre saveurs authentiques et créativité artisanale. Chaque bouchée offre une expérience unique et délicieuse, faisant de chaque occasion un moment mémorable.</p>
                 <p class="prix">Prix moyen : 1.30€ la part</p>
@@ -42,7 +42,7 @@
             </div>
 
             <div class="card">
-                <img src="/photoPatisserie/Individuel/mini3.png" alt="image de gateau">
+                <img src="photoPatisserie/Individuel/mini3.png" alt="image de gateau">
                 <p class="tCard">Individuel</p>
                 <p class="descriptionCard">Découvrez nos petits gâteaux individuel exquis, une fusion parfaite entre saveurs authentiques et créativité artisanale. Chaque bouchée offre une expérience unique et délicieuse, faisant de chaque occasion un moment mémorable.</p>
                 <p class="prix">Prix : 0.85€</p>
@@ -50,7 +50,7 @@
             </div>
             
             <div class="card">
-                <img src="/photoPatisserie/Tarte/tarte2.png" alt="image de tarte">
+                <img src="photoPatisserie/Tarte/tarte2.png" alt="image de tarte">
                 <p class="tCard">Tarte</p>
                 <p class="descriptionCard">Savourez l'instant avec notre Tarte aux fruits frais de saison, une explosion de fraîcheur sucrée. Une croûte fondante soutient des fruits juteux, créant une symphonie de saveurs en chaque bouchée.</p>
                 <p class="prix">Prix moyen : 1.30€ la part</p>
@@ -58,7 +58,7 @@
             </div>
 
             <div class="card">
-                <img src="/photoPatisserie/Galette/galette2.png" alt="image de galette">
+                <img src="photoPatisserie/Galette/galette2.png" alt="image de galette">
                 <p class="tCard">Galette des rois</p>
                 <p class="descriptionCard">Célébrez l'épiphanie avec notre Galette des Rois briochée parfumé à l'orange, citron, rhum et fleur d'oranger, une interprétation douce et moelleuse de la traditionnelle galette.</p>
                 <p class="prix">Prix : 0.85€</p>
@@ -70,7 +70,7 @@
 
         <section class="produits">
             <div class="card">
-                <img src="/photoPatisserie//Occasion/Occasion.jpg" alt="image de gateau spécial">
+                <img src="photoPatisserie//Occasion/Occasion.jpg" alt="image de gateau spécial">
                 <p class="tCard">Occasion</p>
                 <p class="descriptionCard">Découvrez nos gâteaux exquis, une fusion parfaite entre saveurs authentiques et créativité artisanale. Chaque bouchée offre une expérience unique et délicieuse, faisant de chaque occasion un moment mémorable.</p>
                 <p class="prix">Prix : 1.30€</p>
@@ -78,7 +78,7 @@
             </div>
 
             <div class="card">
-                <img src="/photoPatisserie/PieceMontee/pieceMontee.png" alt="image de pièce montée">
+                <img src="photoPatisserie/PieceMontee/pieceMontee.png" alt="image de pièce montée">
                 <p class="tCard">Pièce montée</p>
                 <p class="descriptionCard">Différente forme de pièce montée. Des choux assemblé pour faire une forme originale. Baptème, Mariage, Anniversaire ...</p>
                 <br>
@@ -89,7 +89,7 @@
             </div>
 
             <div class="card">
-                <img src="/photoPatisserie/Chiffre/chiffre.JPG" alt="image de gateau chiffre">
+                <img src="photoPatisserie/Chiffre/chiffre.JPG" alt="image de gateau chiffre">
                 <p class="tCard">Chiffre</p>
                 <p class="descriptionCard">Gateaux bavaroise en forme de chiffre, chaque chiffre pour 8 personnes environ. Décoration comprise.</p>
                 <p class="prix">Prix : 11€</p>
@@ -97,7 +97,7 @@
             </div>
 
             <div class="card">
-                <img src="/photoPatisserie/Quiche/1.jpg" alt="image de quiche">
+                <img src="photoPatisserie/Quiche/1.jpg" alt="image de quiche">
                 <p class="tCard">Quiche</p>
                 <p class="descriptionCard">Savourez l'authenticité de notre Quiche Lorraine, une création qui marie la simplicité et la gourmandise. Une base de pâte brisée croustillante enveloppe une garniture généreuse de lardons fumés, de champignon et d'une onctueuse préparation aux œufs et à la crème fraiche.</p>
                 <p class="prix">Prix : 0.85€</p>
@@ -105,7 +105,7 @@
             </div>
 
             <div class="card">
-                <img src="/photoPatisserie/Pizza/2.jpg" alt="image de pizza">
+                <img src="photoPatisserie/Pizza/2.jpg" alt="image de pizza">
                 <p class="tCard">Pizza</p>
                 <p class="descriptionCard">Dégustez l'art de l'Italie avec notre pizza artisanale. Une pate feuilletée, une généreuse couche de sauce tomate savoureuse, et des garnitures fraîches soigneusement sélectionnées (lardon et jambon blanc).</p>
                 <p class="prix">Prix : 0.85€</p>
@@ -149,21 +149,21 @@
         <p class="titreNav" id="contact">LE BONHEUR DANS CHAQUE BOUCHÉE</p>
         <div class="infos">
             <div class="localisation info">
-                <a href="https://www.google.fr/maps/place/47180+Sainte-Bazeille/@44.5322694,0.0659552,13.03z/data=!4m6!3m5!1s0x12aa84e782bb9cff:0x40665174815add0!8m2!3d44.530896!4d0.093413!16s%2Fm%2F03qm2mw?entry=ttu"><img src="/logo/localisation.png" alt="logo de localisation"></a>
+                <a href="https://www.google.fr/maps/place/47180+Sainte-Bazeille/@44.5322694,0.0659552,13.03z/data=!4m6!3m5!1s0x12aa84e782bb9cff:0x40665174815add0!8m2!3d44.530896!4d0.093413!16s%2Fm%2F03qm2mw?entry=ttu"><img src="logo/localisation.png" alt="logo de localisation"></a>
                 <div>
                     <p class="maj">LOCALISATION</p>
                     <p>Sainte Bazeille</p>
                 </div>
             </div>
             <div class="tel info">
-                <img src="/logo/phone.png" alt="logo de téléphone">
+                <img src="logo/phone.png" alt="logo de téléphone">
                 <div>
                     <p class="maj">NUMÉRO DE TÉLÉPHONE</p>
                     <p>06.28.20.76.92</p>
                 </div>
             </div>
             <div class="mail info">
-                <a href="mailto:patrickdubile47@gmail.com"><img src="/logo/email.png" alt="logo d'email"></a>
+                <a href="mailto:patrickdubile47@gmail.com"><img src="logo/email.png" alt="logo d'email"></a>
                 <div>
                     <p class="maj">ADRESSE E-MAIL</p>
                     <a href="mailto:patrickdubile47@gmail.com"><p>patrickdubile47@gmail.com</p></a>
