modif lien photo

--- a/buche.html
+++ b/buche.html
@@ -12,7 +12,7 @@
         <p class="titreNav" id="nosProduits">LES BUCHES</p>
         <div class="presentation">
             <div class="imgProduit">
-                <img class="un" src="/photoPatisserie/Buche/1.jpg" alt="image mille feuille">
+                <img class="un" src="photoPatisserie/Buche/1.jpg" alt="image buche">
             </div>
             <div class="descProduit">
                 <p class="sousTitre">Buche de noel</p>
@@ -23,15 +23,15 @@
 
         <p class="sousTitre">Autres exemples</p>
         <section class="touteImage">
-        <img src="/photoPatisserie/Buche/2.jpg" alt="image mille feuille">
-        <img src="/photoPatisserie/Buche/3.jpg" alt="image mille feuille">
-        <img src="/photoPatisserie/Buche/4.jpg" alt="image mille feuille">
-        <img src="/photoPatisserie/Buche/5.jpg" alt="image mille feuille">
-        <img src="/photoPatisserie/Buche/5.1.jpg" alt="image mille feuille">
-        <img src="/photoPatisserie/Buche/6.jpg" alt="image mille feuille">
-        <img src="/photoPatisserie/Buche/6.1.jpg" alt="image mille feuille">
-        <img src="/photoPatisserie/Buche/7.jpg" alt="image mille feuille">
-        <img src="/photoPatisserie/Buche/7.1.jpg" alt="image mille feuille">
+        <img src="photoPatisserie/Buche/2.jpg" alt="image buche">
+        <img src="photoPatisserie/Buche/3.jpg" alt="image buche">
+        <img src="photoPatisserie/Buche/4.jpg" alt="image buche">
+        <img src="photoPatisserie/Buche/5.jpg" alt="image buche">
+        <img src="photoPatisserie/Buche/5.1.jpg" alt="image buche">
+        <img src="photoPatisserie/Buche/6.jpg" alt="image buche">
+        <img src="photoPatisserie/Buche/6.1.jpg" alt="image buche">
+        <img src="photoPatisserie/Buche/7.jpg" alt="image buche">
+        <img src="photoPatisserie/Buche/7.1.jpg" alt="image buche">
         </section>
     </main>
     
