--- a/chiffre.html
+++ b/chiffre.html
@@ -12,10 +12,10 @@
         <p class="titreNav" id="nosProduits">CHIFFRES</p>
         <div class="presentation">
             <div class="imgProduit">
-                <img src="/photoPatisserie/Chiffre/1.jpg" alt="image mille feuille">
-                <img src="/photoPatisserie/Chiffre/1.1.jpg" alt="image mille feuille">
-                <img src="/photoPatisserie/Chiffre/1.2.JPG" alt="image mille feuille">
-                <img src="/photoPatisserie/Chiffre/1.3.JPG" alt="image mille feuille">
+                <img src="photoPatisserie/Chiffre/1.jpg" alt="image chiffre">
+                <img src="photoPatisserie/Chiffre/1.1.jpg" alt="image chiffre">
+                <img src="photoPatisserie/Chiffre/1.2.JPG" alt="image chiffre">
+                <img src="photoPatisserie/Chiffre/1.3.JPG" alt="image chiffre">
             </div>
             <div class="descProduit">
                 <p class="sousTitre">Chiffre d'anniversaire</p>
