--- a/galette.html
+++ b/galette.html
@@ -13,9 +13,9 @@
 
         <div class="presentation">
             <div class="imgProduit">
-                <img src="/photoPatisserie/Galette/1.jpg" alt="image mille feuille">
-                <img src="/photoPatisserie/Galette/1.1.jpg" alt="image mille feuille">
-                <img src="/photoPatisserie/Galette/1.2.jpg" alt="image mille feuille">
+                <img src="photoPatisserie/Galette/1.jpg" alt="image galette">
+                <img src="photoPatisserie/Galette/1.1.jpg" alt="image galette">
+                <img src="photoPatisserie/Galette/1.2.jpg" alt="image galette">
             </div>
             <div class="descProduit">
                 <p class="sousTitre">Galette des rois</p>
@@ -26,9 +26,9 @@
 
         <div class="presentation">
             <div class="imgProduit">
-                <img src="/photoPatisserie/Galette/2.jpg" alt="image mille feuille">
-                <img src="/photoPatisserie/Galette/2.2.png" alt="image mille feuille">
-                <img src="/photoPatisserie/Galette/2.3.jpg" alt="image mille feuille">
+                <img src="photoPatisserie/Galette/2.jpg" alt="image galette">
+                <img src="photoPatisserie/Galette/2.2.png" alt="image galette">
+                <img src="photoPatisserie/Galette/2.3.jpg" alt="image galette">
             </div>
             <div class="descProduit">
                 <p class="sousTitre">Galette des rois Royale</p>
