--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <p class="tCard">Buche</p>
                 <p class="descriptionCard">Découvrez nos buches exquise, une fusion parfaite entre saveurs authentiques et créativité artisanale. Chaque bouchée offre une expérience unique et délicieuse, faisant de chaque occasion un moment mémorable.</p>
                 <p class="prix">Prix moyen : 1.30€ la part</p>
-                <a href="/buche.html" class="maj">VOIR TOUTES LES BUCHES</a>
+                <a href="buche.html" class="maj">VOIR TOUTES LES BUCHES</a>
             </div>
 
             <div class="card">
@@ -46,7 +46,7 @@
                 <p class="tCard">Individuel</p>
                 <p class="descriptionCard">Découvrez nos petits gâteaux individuel exquis, une fusion parfaite entre saveurs authentiques et créativité artisanale. Chaque bouchée offre une expérience unique et délicieuse, faisant de chaque occasion un moment mémorable.</p>
                 <p class="prix">Prix : 0.85€</p>
-                <a href="/individuel.html" class="maj">VOIR TOUT LES GATEAUX </a>
+                <a href="individuel.html" class="maj">VOIR TOUT LES GATEAUX </a>
             </div>
             
             <div class="card">
@@ -74,7 +74,7 @@
                 <p class="tCard">Occasion</p>
                 <p class="descriptionCard">Découvrez nos gâteaux exquis, une fusion parfaite entre saveurs authentiques et créativité artisanale. Chaque bouchée offre une expérience unique et délicieuse, faisant de chaque occasion un moment mémorable.</p>
                 <p class="prix">Prix : 1.30€</p>
-                <a href="/occasion.html" class="maj">VOIR TOUT LES GATEAUX</a>
+                <a href="occasion.html" class="maj">VOIR TOUT LES GATEAUX</a>
             </div>
 
             <div class="card">
@@ -93,7 +93,7 @@
                 <p class="tCard">Chiffre</p>
                 <p class="descriptionCard">Gateaux bavaroise en forme de chiffre, chaque chiffre pour 8 personnes environ. Décoration comprise.</p>
                 <p class="prix">Prix : 11€</p>
-                <a href="/chiffre.html" class="maj">VOIR TOUT LES GATEAUX</a>
+                <a href="chiffre.html" class="maj">VOIR TOUT LES GATEAUX</a>
             </div>
 
             <div class="card">
