--- a/pizza.html
+++ b/pizza.html
@@ -12,9 +12,9 @@
         <p class="titreNav" id="nosProduits">PIZZA</p>
         <div class="presentation">
             <div class="imgProduit">
-                <img class="un" src="/photoPatisserie/Pizza/2.jpg" alt="image pizza">
-                <img class="un" src="/photoPatisserie/Pizza/3.jpg" alt="image pizza">
-                <img class="un" src="/photoPatisserie/Pizza/4.jpg" alt="image pizza">
+                <img class="un" src="photoPatisserie/Pizza/2.jpg" alt="image pizza">
+                <img class="un" src="photoPatisserie/Pizza/3.jpg" alt="image pizza">
+                <img class="un" src="photoPatisserie/Pizza/4.jpg" alt="image pizza">
             </div>
             <div class="descProduit">
                 <p class="sousTitre">Pizza</p>
