--- a/tarte.html
+++ b/tarte.html
@@ -12,7 +12,7 @@
         <p class="titreNav" id="nosProduits">TARTES</p>
         <div class="presentation">
             <div class="imgProduit">
-                <img class="un" src="/photoPatisserie/Tarte/1.jpg" alt="image mille feuille">
+                <img class="un" src="photoPatisserie/Tarte/1.jpg" alt="image mille feuille">
             </div>
             <div class="descProduit">
                 <p class="sousTitre">Tarte au fruit</p>
@@ -23,7 +23,7 @@
 
         <div class="presentation">
             <div class="imgProduit">
-                <img class="un" src="/photoPatisserie/Gateau/4.jpg" alt="image mille feuille">
+                <img class="un" src="photoPatisserie/Gateau/4.jpg" alt="image mille feuille">
             </div>
             <div class="descProduit">
                 <p class="sousTitre">Tarte au citron meringué</p>
@@ -34,7 +34,7 @@
 
         <div class="presentation">
             <div class="imgProduit">
-                <img class="un" src="/photoPatisserie/Gateau/13.jpg" alt="image mille feuille">
+                <img class="un" src="photoPatisserie/Gateau/13.jpg" alt="image mille feuille">
             </div>
             <div class="descProduit">
                 <p class="sousTitre">Tarte Bourdaloue</p>
@@ -45,7 +45,7 @@
 
         <div class="presentation">
             <div class="imgProduit">
-                <img class="un" src="/photoPatisserie/Gateau/8.jpg" alt="image mille feuille">
+                <img class="un" src="photoPatisserie/Gateau/8.jpg" alt="image mille feuille">
             </div>
             <div class="descProduit">
                 <p class="sousTitre">Tarte au fraise</p>
