--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <img src="photoPatisserie/Gateau/6.jpg" alt="image de gateau">
                 <p class="tCard">Gateaux</p>
                 <p class="descriptionCard">Découvrez nos gâteaux exquis, une fusion parfaite entre saveurs authentiques et créativité artisanale. Chaque bouchée offre une expérience unique et délicieuse, faisant de chaque occasion un moment mémorable.</p>
-                <p class="prix">Prix moyen : 1.30€ la part</p>
+                <p class="prix">Prix : 1.30€ la part</p>
                 <a href="gateaux.html" class="maj">VOIR TOUT LES GATEAUX</a>
             </div>
 
@@ -37,7 +37,7 @@
                 <img src="photoPatisserie/Buche/2.jpg" alt="image de buche">
                 <p class="tCard">Buche</p>
                 <p class="descriptionCard">Découvrez nos buches exquise, une fusion parfaite entre saveurs authentiques et créativité artisanale. Chaque bouchée offre une expérience unique et délicieuse, faisant de chaque occasion un moment mémorable.</p>
-                <p class="prix">Prix moyen : 1.30€ la part</p>
+                <p class="prix">Prix : 1.30€ la part</p>
                 <a href="buche.html" class="maj">VOIR TOUTES LES BUCHES</a>
             </div>
 
@@ -45,7 +45,7 @@
                 <img src="photoPatisserie/Individuel/mini3.png" alt="image de gateau">
                 <p class="tCard">Individuel</p>
                 <p class="descriptionCard">Découvrez nos petits gâteaux individuel exquis, une fusion parfaite entre saveurs authentiques et créativité artisanale. Chaque bouchée offre une expérience unique et délicieuse, faisant de chaque occasion un moment mémorable.</p>
-                <p class="prix">Prix : 0.85€</p>
+                <p class="prix">Prix : 1€</p>
                 <a href="individuel.html" class="maj">VOIR TOUT LES GATEAUX </a>
             </div>
             
@@ -61,7 +61,7 @@
                 <img src="photoPatisserie/Galette/galette2.png" alt="image de galette">
                 <p class="tCard">Galette des rois</p>
                 <p class="descriptionCard">Célébrez l'épiphanie avec notre Galette des Rois briochée parfumé à l'orange, citron, rhum et fleur d'oranger, une interprétation douce et moelleuse de la traditionnelle galette.</p>
-                <p class="prix">Prix : 0.85€</p>
+                <p class="prix">Prix moyen : 0.85€ la part</p>
                 <a href="galette.html" class="maj">VOIR TOUTES LES GALETTES</a>
             </div>
         </section>
@@ -73,7 +73,7 @@
                 <img src="photoPatisserie//Occasion/Occasion.jpg" alt="image de gateau spécial">
                 <p class="tCard">Occasion</p>
                 <p class="descriptionCard">Découvrez nos gâteaux exquis, une fusion parfaite entre saveurs authentiques et créativité artisanale. Chaque bouchée offre une expérience unique et délicieuse, faisant de chaque occasion un moment mémorable.</p>
-                <p class="prix">Prix : 1.30€</p>
+                <p class="prix">Prix : 1.30€ la part</p>
                 <a href="occasion.html" class="maj">VOIR TOUT LES GATEAUX</a>
             </div>
 
@@ -100,7 +100,7 @@
                 <img src="photoPatisserie/Quiche/1.jpg" alt="image de quiche">
                 <p class="tCard">Quiche</p>
                 <p class="descriptionCard">Savourez l'authenticité de notre Quiche Lorraine, une création qui marie la simplicité et la gourmandise. Une base de pâte brisée croustillante enveloppe une garniture généreuse de lardons fumés, de champignon et d'une onctueuse préparation aux œufs et à la crème fraiche.</p>
-                <p class="prix">Prix : 0.85€</p>
+                <p class="prix">Prix : 0.85€ la part</p>
                 <a href="quiche.html" class="maj">VOIR TOUTES LES QUICHES</a>
             </div>
 
@@ -108,7 +108,7 @@
                 <img src="photoPatisserie/Pizza/2.jpg" alt="image de pizza">
                 <p class="tCard">Pizza</p>
                 <p class="descriptionCard">Dégustez l'art de l'Italie avec notre pizza artisanale. Une pate feuilletée, une généreuse couche de sauce tomate savoureuse, et des garnitures fraîches soigneusement sélectionnées (lardon et jambon blanc).</p>
-                <p class="prix">Prix : 0.85€</p>
+                <p class="prix">Prix : 0.85€ la part</p>
                 <a href="pizza.html" class="maj">VOIR TOUTES LES PIZZAS</a>
             </div>
         </section>
