maj photo galette

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
 
             <div class="card">
-                <img src="photoPatisserie/Galette/galette2.png" alt="image de galette">
+                <img src="photoPatisserie/Galette/galette1.jpg" alt="image de galette">
                 <p class="tCard">Galette des rois</p>
                 <p class="descriptionCard">Célébrez l'épiphanie avec notre Galette des Rois briochée parfumé à l'orange, citron, rhum et fleur d'oranger, une interprétation douce et moelleuse de la traditionnelle galette.</p>
                 <p class="prix">Prix moyen : 0.85€ la part</p>
