augmentation des prix

--- a/galette.html
+++ b/galette.html
@@ -20,7 +20,8 @@
             <div class="descProduit">
                 <p class="sousTitre">Galette des rois</p>
                 <p class="desc">Célébrez l'épiphanie avec notre Galette des Rois briochée parfumé à l'orange, citron, rhum et fleur d'oranger, une interprétation douce et moelleuse de la traditionnelle galette.</p>
-                <p>La part : 0.85 €</p>
+                <p>6 Personnes : 5.50 €</p>
+                <p>8 Personnes : 7 €</p>
             </div>
         </div>
 
@@ -33,7 +34,7 @@
             <div class="descProduit">
                 <p class="sousTitre">Galette des rois Royale</p>
                 <p class="desc">Célébrez l'épiphanie avec notre Galette des Rois briochée parfumé à l'orange, citron, rhum et fleur d'oranger, une interprétation douce et moelleuse de la traditionnelle galette. Garni de crème patissière allégé et de crème chantilly.</p>
-                <p>La part : 1.30 €</p>
+                <p>La part : 1.40 €</p>
             </div>
         </div>
     </main>
