changement prix part unité à part globale

--- a/gateaux.html
+++ b/gateaux.html
@@ -18,7 +18,10 @@
             <div class="descProduit">
                 <p class="sousTitre">Mille-Feuille</p>
                 <p class="desc">Découvrez l'élégance du mille-feuille : des couches croustillantes de pâte feuilletée rencontrent une crème pâtissière onctueuse. Une expérience gourmande inégalée, alliant tradition française et savoir-faire artisanal.</p>
-                <p>La part : 1.40 €</p>
+                <p>6 parts : 8.40 € / 8 parts : 11.20 €</p>
+                <p>10 parts : 14 € / 12 parts : 16.80 €</p>
+                <p>20 parts : 28.30 € / 30 parts : 42 €</p>
+                <p>40 parts : 56 €</p>
             </div>
         </div>
         
@@ -32,7 +35,10 @@
             <div class="descProduit">
                 <p class="sousTitre">Saint-Honoré</p>
                 <p class="desc">Découvrez l'apogée de la pâtisserie française avec notre Saint-Honoré exquis. Cette création allie la légèreté d'une base de pâte feuilletée caramélisée, la richesse d'une crème chantilly aérienne, et la perfection des choux garnis.</p>
-                <p>La part : 1.40 €</p>
+                <p>6 parts : 8.40 € / 8 parts : 11.20 €</p>
+                <p>10 parts : 14 € / 12 parts : 16.80 €</p>
+                <p>20 parts : 28.30 € / 30 parts : 42 €</p>
+                <p>40 parts : 56 €</p>
             </div>
         </div>
         
@@ -46,7 +52,10 @@
             <div class="descProduit">
                 <p class="sousTitre">Foret-Noire</p>
                 <p class="desc">Découvrez l'élégance gourmande de notre Forêt Noire artisanale. Entre des couches de génoise chocolat légère, une crème fouettée aérienne, et des cerises amaréna juteuses, chaque bouchée est une escapade sucrée. Notre Forêt Noire, ornée de copeaux de chocolat noir, incarne la perfection du mariage entre le chocolat et les fruits.</p>
-                <p>La part : 1.40 €</p>
+                <p>6 parts : 8.40 € / 8 parts : 11.20 €</p>
+                <p>10 parts : 14 € / 12 parts : 16.80 €</p>
+                <p>20 parts : 28.30 € / 30 parts : 42 €</p>
+                <p>40 parts : 56 €</p>
             </div>
         </div>
 
@@ -57,7 +66,10 @@
             <div class="descProduit">
                 <p class="sousTitre">Fraisier</p>
                 <p class="desc">Découvrez l'élégance sucrée de notre Fraisier, une délicate harmonie entre la fraîcheur des fraises et la douceur de la crème mousseline. Chaque tranche révèle un spectacle de couches légères, de fraises gorgées de soleil, le tout couronné d'une génoise moelleuse.</p>
-                <p>La part : 1.40 €</p>
+                <p>6 parts : 8.40 € / 8 parts : 11.20 €</p>
+                <p>10 parts : 14 € / 12 parts : 16.80 €</p>
+                <p>20 parts : 28.30 € / 30 parts : 42 €</p>
+                <p>40 parts : 56 €</p>
             </div>
         </div>
 
@@ -69,7 +81,10 @@
             <div class="descProduit">
                 <p class="sousTitre">Tropéziènne</p>
                 <p class="desc">Plongez dans le luxe sucré avec notre Tarte Tropézienne. Une base moelleuse de brioche légèrement sucrée, enveloppée d'une généreuse couche de crème mousseline vanillée. Chaque bouchée est une escapade gourmande sur la Côte d'Azur, où la simplicité rencontre l'opulence.</p>
-                <p>La part : 1.40 €</p>
+                <p>6 parts : 8.40 € / 8 parts : 11.20 €</p>
+                <p>10 parts : 14 € / 12 parts : 16.80 €</p>
+                <p>20 parts : 28.30 € / 30 parts : 42 €</p>
+                <p>40 parts : 56 €</p>
             </div>
         </div>
 
@@ -80,7 +95,10 @@
             <div class="descProduit">
                 <p class="sousTitre">Moka</p>
                 <p class="desc">Découvrez l'élégance gourmande de notre Moka, une symphonie alliant génoise et crème au beurre (café, chocolat, grand-marnier, vanille, praliné).</p>
-                <p>La part : 1.40 €</p>
+                <p>6 parts : 8.40 € / 8 parts : 11.20 €</p>
+                <p>10 parts : 14 € / 12 parts : 16.80 €</p>
+                <p>20 parts : 28.30 € / 30 parts : 42 €</p>
+                <p>40 parts : 56 €</p>
             </div>
         </div>
 
@@ -91,7 +109,11 @@
             <div class="descProduit">
                 <p class="sousTitre">Croustade Pomme</p>
                 <p class="desc">Succombez à la gourmandise avec notre Croustade aux Pommes, une création croustillante qui célèbre le mariage parfait entre des pommes fondantes et une pâte feuilletée dorée.</p>
-                <p>La part : 0.90 €</p>
+                <p>6 parts : 6 €</p>
+                <p>8 parts : 8 €</p>
+                <p>12 parts : 12 €</p>
+                <p>20 parts : 20 €</p>
+                <p>24 parts : 24 €</p>
             </div>
         </div>
 
@@ -103,7 +125,10 @@
             <div class="descProduit">
                 <p class="sousTitre">Pruneaux-Armagnac</p>
                 <p class="desc">Succombez à l'harmonie sucrée de notre bavaroise pruneaux surmonté d'une bavaroise à l'armagnac, une création délicate où la fraîcheur rencontre la finesse d'une bavaroise onctueuse.</p>
-                <p>La part : 1.40 €</p>
+                <p>6 parts : 8.40 € / 8 parts : 11.20 €</p>
+                <p>10 parts : 14 € / 12 parts : 16.80 €</p>
+                <p>20 parts : 28.30 € / 30 parts : 42 €</p>
+                <p>40 parts : 56 €</p>
             </div>
         </div>
 
@@ -114,7 +139,10 @@
             <div class="descProduit">
                 <p class="sousTitre">Bavaroise Poire-Chocolat</p>
                 <p class="desc">Succombez à l'harmonie sucrée de notre bavaroise chocolat noir, une création délicate où la fraîcheur des poires rencontre la finesse d'une bavaroise chocolat onctueuse. Pour couronner cette expérience, un craquant praliné chocolat au lait apporte la touche parfaite de croquant.</p>
-                <p>La part : 1.40 €</p>
+                <p>6 parts : 8.40 € / 8 parts : 11.20 €</p>
+                <p>10 parts : 14 € / 12 parts : 16.80 €</p>
+                <p>20 parts : 28.30 € / 30 parts : 42 €</p>
+                <p>40 parts : 56 €</p>
             </div>
         </div>
 
@@ -125,7 +153,10 @@
             <div class="descProduit">
                 <p class="sousTitre">Bavaroise Tiramissu</p>
                 <p class="desc">Plongez dans l'Italie avec notre Tiramisu exquis. Des couches de biscuits imbibés de café, de mascarpone crémeux et saupoudrées de cacao, créent une symphonie de saveurs et de textures.</p>
-                <p>La part : 1.40</p>
+                <p>6 parts : 8.40 € / 8 parts : 11.20 €</p>
+                <p>10 parts : 14 € / 12 parts : 16.80 €</p>
+                <p>20 parts : 28.30 € / 30 parts : 42 €</p>
+                <p>40 parts : 56 €</p>
             </div>
         </div>
 
@@ -137,7 +168,10 @@
             <div class="descProduit">
                 <p class="sousTitre">Bavaroise-Mandarine craquant</p>
                 <p class="desc">Succombez à l'harmonie sucrée de notre bavaroise à la mandarine, une création délicate où la fraîcheur des mandarines rencontre la finesse d'une bavaroise onctueuse. Pour couronner cette expérience, un craquant praliné chocolat au lait apporte la touche parfaite de croquant.</p>
-                <p>La part : 1.40 €</p>
+                <p>6 parts : 8.40 € / 8 parts : 11.20 €</p>
+                <p>10 parts : 14 € / 12 parts : 16.80 €</p>
+                <p>20 parts : 28.30 € / 30 parts : 42 €</p>
+                <p>40 parts : 56 €</p>
             </div>
         </div>
 
@@ -149,7 +183,10 @@
             <div class="descProduit">
                 <p class="sousTitre">Bavaroise-Framboise</p>
                 <p class="desc">Succombez à l'harmonie sucrée de notre bavaroise à la framboise, une création délicate où la fraîcheur des framboise rencontre la finesse d'une bavaroise onctueuse.</p>
-                <p>La part : 1.40 €</p>
+                <p>6 parts : 8.40 € / 8 parts : 11.20 €</p>
+                <p>10 parts : 14 € / 12 parts : 16.80 €</p>
+                <p>20 parts : 28.30 € / 30 parts : 42 €</p>
+                <p>40 parts : 56 €</p>
             </div>
         </div>
 
@@ -160,7 +197,10 @@
             <div class="descProduit">
                 <p class="sousTitre">Bavaroise-Fraise</p>
                 <p class="desc">Succombez à l'harmonie sucrée de notre bavaroise à la fraise, une création délicate où la fraîcheur des fraises rencontre la finesse d'une bavaroise onctueuse. <br> Le décors du dessus ne sera disponible qu'a la saison des fraises.</p>
-                <p>La part : 1.40 €</p>
+                <p>6 parts : 8.40 € / 8 parts : 11.20 €</p>
+                <p>10 parts : 14 € / 12 parts : 16.80 €</p>
+                <p>20 parts : 28.30 € / 30 parts : 42 €</p>
+                <p>40 parts : 56 €</p>
             </div>
         </div>
 
@@ -172,7 +212,10 @@
             <div class="descProduit">
                 <p class="sousTitre">Bavaroise 3 chocolats</p>
                 <p class="desc">Succombez à l'harmonie sucrée de notre bavaroise au cocolat au lait et chocolat blanc. Pour couronner cette expérience, un craquant praliné chocolat au lait apporte la touche parfaite de croquant.</p>
-                <p>La part : 1.40 €</p>
+                <p>6 parts : 8.40 € / 8 parts : 11.20 €</p>
+                <p>10 parts : 14 € / 12 parts : 16.80 €</p>
+                <p>20 parts : 28.30 € / 30 parts : 42 €</p>
+                <p>40 parts : 56 €</p>
             </div>
         </div>
     </main>
