--- a/occasion.html
+++ b/occasion.html
@@ -19,7 +19,10 @@
             <div class="descProduit">
                 <p class="sousTitre">Foret-Noire</p>
                 <p class="desc">Découvrez l'élégance gourmande de notre Forêt Noire artisanale. Entre des couches de génoise chocolat légère, une crème fouettée aérienne, et des cerises amaréna juteuses, chaque bouchée est une escapade sucrée. Notre Forêt Noire, ornée de copeaux de chocolat noir, incarne la perfection du mariage entre le chocolat et les fruits.</p>
-                <p>La part : 1.40 €</p>
+                <p>6 parts : 8.40 € / 8 parts : 11.20 €</p>
+                <p>10 parts : 14 € / 12 parts : 16.80 €</p>
+                <p>20 parts : 28.30 € / 30 parts : 42 €</p>
+                <p>40 parts : 56 €</p>
             </div>
         </div>
         <div class="presentation">
@@ -32,7 +35,10 @@
             <div class="descProduit">
                 <p class="sousTitre">Bavaroise 3 chocolat</p>
                 <p class="desc">Succombez à l'harmonie sucrée de notre bavaroise au cocolat au lait et chocolat blanc. Pour couronner cette expérience, un craquant praliné chocolat au lait apporte la touche parfaite de croquant.</p>
-                <p>La part : 1.40 €</p>
+                <p>6 parts : 8.40 € / 8 parts : 11.20 €</p>
+                <p>10 parts : 14 € / 12 parts : 16.80 €</p>
+                <p>20 parts : 28.30 € / 30 parts : 42 €</p>
+                <p>40 parts : 56 €</p>
             </div>
         </div>
         <div class="presentation">
@@ -42,7 +48,10 @@
             <div class="descProduit">
                 <p class="sousTitre">Bavaroise Tiramissu</p>
                 <p class="desc">Plongez dans l'Italie avec notre Tiramisu exquis. Des couches de biscuits imbibés de café, de mascarpone crémeux et saupoudrées de cacao, créent une symphonie de saveurs et de textures.</p>
-                <p>La part : 1.40 €</p>
+                <p>6 parts : 8.40 € / 8 parts : 11.20 €</p>
+                <p>10 parts : 14 € / 12 parts : 16.80 €</p>
+                <p>20 parts : 28.30 € / 30 parts : 42 €</p>
+                <p>40 parts : 56 €</p>
             </div>
         </div>
         <div class="presentation">
@@ -52,7 +61,10 @@
             <div class="descProduit">
                 <p class="sousTitre">Bavaroise Framboise</p>
                 <p class="desc">Succombez à l'harmonie sucrée de notre bavaroise à la framboise, une création délicate où la fraîcheur des framboise rencontre la finesse d'une bavaroise onctueuse.</p>
-                <p>La part : 1.40 €</p>
+                <p>6 parts : 8.40 € / 8 parts : 11.20 €</p>
+                <p>10 parts : 14 € / 12 parts : 16.80 €</p>
+                <p>20 parts : 28.30 € / 30 parts : 42 €</p>
+                <p>40 parts : 56 €</p>
             </div>
         </div>
         <div class="presentation">
@@ -64,7 +76,10 @@
             <div class="descProduit">
                 <p class="sousTitre">Bavaroise Mandarine craquant</p>
                 <p class="desc">Succombez à l'harmonie sucrée de notre bavaroise à la mandarine, une création délicate où la fraîcheur des mandarines rencontre la finesse d'une bavaroise onctueuse. Pour couronner cette expérience, un craquant praliné chocolat au lait apporte la touche parfaite de croquant.</p>
-                <p>La part : 1.40 €</p>
+                <p>6 parts : 8.40 € / 8 parts : 11.20 €</p>
+                <p>10 parts : 14 € / 12 parts : 16.80 €</p>
+                <p>20 parts : 28.30 € / 30 parts : 42 €</p>
+                <p>40 parts : 56 €</p>
             </div>
         </div>
         <div class="presentation">
@@ -74,7 +89,10 @@
             <div class="descProduit">
                 <p class="sousTitre">Tarte aux fraises chantilly</p>
                 <p class="desc">Savourez l'instant avec notre Tarte aux Fraises, une explosion de fraîcheur sucrée. Une croûte fondante soutient des fraises juteuses, créant une symphonie de saveurs en chaque bouchée. <br> Cette tarte est disponible seulement pendant la saison des fraises</p>
-                <p>La part : 1.40 €</p>
+                <p>6 parts : 8.40 € / 8 parts : 11.20 €</p>
+                <p>10 parts : 14 € / 12 parts : 16.80 €</p>
+                <p>20 parts : 28.30 € / 30 parts : 42 €</p>
+                <p>40 parts : 56 €</p>
             </div>
         </div>
     </main>
