--- a/pizza.html
+++ b/pizza.html
@@ -19,7 +19,8 @@
             <div class="descProduit">
                 <p class="sousTitre">Pizza</p>
                 <p class="desc">Dégustez l'art de l'Italie avec notre pizza artisanale. Une pate feuilletée, une généreuse couche de sauce tomate savoureuse, et des garnitures fraîches soigneusement sélectionnées (lardon et jambon blanc).</p>
-                <p>La part : 0.90 €</p>
+                <p>12 parts ou 48 parts(apéro) : 11 €</p>
+                <p>24 parts ou 96 parts(apéro) : 22 €</p>
             </div>
         </div>
     </main>
