--- a/quiche.html
+++ b/quiche.html
@@ -18,7 +18,8 @@
             <div class="descProduit">
                 <p class="sousTitre">Quiche Lorraine</p>
                 <p class="desc">Savourez l'authenticité de notre Quiche Lorraine, une création qui marie la simplicité et la gourmandise. Une base de pâte brisée croustillante enveloppe une garniture généreuse de lardons fumés, de champignon et d'une onctueuse préparation aux œufs et à la crème fraiche.</p>
-                <p>La part : 0.90 €</p>
+                <p>12 parts ou 48 parts(apéro) : 11 €</p>
+                <p>24 parts ou 96 parts(apéro) : 22 €</p>
             </div>
         </div>
     </main>
