--- a/tarte.html
+++ b/tarte.html
@@ -17,7 +17,8 @@
             <div class="descProduit">
                 <p class="sousTitre">Tarte au fruit</p>
                 <p class="desc">Savourez l'instant avec notre Tarte aux fruits frais de saison, une explosion de fraîcheur sucrée. Une croûte fondante soutient des fruits juteux, créant une symphonie de saveurs en chaque bouchée.</p>
-                <p>La part : 0.90 €</p>
+                <p>12 parts ou 48 parts(apéro) : 11 €</p>
+                <p>24 parts ou 96 parts(apéro) : 22 €</p>
             </div>
         </div>
 
@@ -28,7 +29,10 @@
             <div class="descProduit">
                 <p class="sousTitre">Tarte au citron meringué</p>
                 <p class="desc">Éveillez vos papilles avec notre tarte au citron meringuée exquise. Une croûte délicate, une crème au citron vibrante, couronnée d'une meringue légère. Une fusion parfaite de douceur et d'acidité dans chaque bouchée.</p>
-                <p>La part : 1.40 €</p>
+                <p>6 parts : 8.40 € / 8 parts : 11.20 €</p>
+                <p>10 parts : 14 € / 12 parts : 16.80 €</p>
+                <p>20 parts : 28.30 € / 30 parts : 42 €</p>
+                <p>40 parts : 56 €</p>
             </div>
         </div>
 
@@ -39,7 +43,10 @@
             <div class="descProduit">
                 <p class="sousTitre">Tarte Bourdaloue</p>
                 <p class="desc">Succombez à l'élégance intemporelle de notre Tarte Bourdaloue. Une délicate alliance entre une pâte feuilletée croustillante, une crème d'amande généreuse et des poires ou pèche ou brunion.</p>
-                <p>La part : 1.40 €</p>
+                <p>6 parts : 6 €</p>
+                <p>8 parts : 8 €</p>
+                <p>12 parts : 12 €</p>
+                <p>24 parts : 24 €</p>
             </div>
         </div>
 
@@ -50,7 +57,10 @@
             <div class="descProduit">
                 <p class="sousTitre">Tarte au fraise</p>
                 <p class="desc">Savourez l'instant avec notre Tarte aux Fraises, une explosion de fraîcheur sucrée. Une croûte fondante soutient des fraises juteuses, créant une symphonie de saveurs en chaque bouchée. <br> Cette tarte est disponible seulement pendant la saison des fraises</p>
-                <p>La part : 1.40 €</p>
+                <p>6 parts : 8.40 € / 8 parts : 11.20 €</p>
+                <p>10 parts : 14 € / 12 parts : 16.80 €</p>
+                <p>20 parts : 28.30 € / 30 parts : 42 €</p>
+                <p>40 parts : 56 €</p>
             </div>
         </div>
     </main>
