--- a/chiffre.html
+++ b/chiffre.html
@@ -16,11 +16,27 @@
                 <img src="photoPatisserie/Chiffre/1.1.jpg" alt="image chiffre">
                 <img src="photoPatisserie/Chiffre/1.2.JPG" alt="image chiffre">
                 <img src="photoPatisserie/Chiffre/1.3.JPG" alt="image chiffre">
+                <img src="photoPatisserie/Chiffre/1.4.JPG" alt="image chiffre">
+                <img src="photoPatisserie/Chiffre/1.5.JPG" alt="image chiffre">
+                <img src="photoPatisserie/Chiffre/1.6.JPG" alt="image chiffre">
+                <img src="photoPatisserie/Chiffre/1.7.JPG" alt="image chiffre">
             </div>
             <div class="descProduit">
                 <p class="sousTitre">Chiffre d'anniversaire</p>
                 <p class="desc">Gateaux bavaroise en forme de chiffre, chaque chiffre pour 8 personnes environ. Décoration comprise.</p>
                 <p>Prix d'un chiffre : 13€</p>
+            </div>
+        </div>
+
+        <div class="presentation">
+            <div class="imgProduit">
+                <img src="photoPatisserie/Chiffre/2.1.jpg" alt="image chiffre">
+                <img src="photoPatisserie/Chiffre/2.2.jpg" alt="image chiffre">
+            </div>
+            <div class="descProduit">
+                <p class="sousTitre">Chiffre d'anniversaire en choux</p>
+                <p class="desc">Choux mis en forme de chiffre, chaque chiffre pour 8 personnes environ. Décoration comprise.</p>
+                <p>Le prix d'un chiffre dépend du nombre de choux. Même tarif que les pièces montées.</p>
             </div>
         </div>
     </main>
