--- a/tarte.html
+++ b/tarte.html
@@ -12,7 +12,8 @@
         <p class="titreNav" id="nosProduits">TARTES</p>
         <div class="presentation">
             <div class="imgProduit">
-                <img class="un" src="photoPatisserie/Tarte/1.jpg" alt="image mille feuille">
+                <img class="un" src="photoPatisserie/Tarte/1.jpg" alt="image tarte aux fruits">
+                <img class="un" src="photoPatisserie/Tarte/1.1.jpg" alt="image tarte aux fruits">
             </div>
             <div class="descProduit">
                 <p class="sousTitre">Tarte au fruit</p>
